--- a/home/style.css
+++ b/home/style.css
@@ -1,16 +1,65 @@
 /* Colors to use: Different Shades of Blue, Black, White. Colors of a Blue Jay. */
+:root {
+    margin: 0;
+    padding: 0;
+}
+
 html {
     margin: 0;
     padding: 0;
-    /* simple reset */
     scroll-behavior: smooth;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    overflow-x: hidden;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
     margin: 0;
 }
 
+h2 {
+    margin: 0;
+}
+p {
+    margin: 6px 0;
+}
+
+section.overview {
+    border: 3px black solid;
+    margin: 6px;
+    padding: 10px 20px;
+    border-radius: 15px;
+}
+
+section.flex1 {
+    display: flex;
+}
+section.flex2 {
+    display: flex;
+    flex: 12;
+    flex-direction: column;
+}
+
+article.article1, article.article2 {
+    border: 3px black solid;
+    margin: 6px;
+    padding: 10px 20px;
+    border-radius: 15px;
+}
+    article.article2 {
+        text-align: right;
+    }
+
+aside.aside1 {
+    background-color: black;
+    color: white;
+    border-radius: 15px 0 0 15px;
+    margin: 6px 0 6px 6px;
+    padding: 10px 20px;
+    text-align: center;
+    flex: 1;
+}
+
+/* navigation bar */
 nav.topnav {
     display: flex;
     align-items: center;
@@ -18,6 +67,8 @@ nav.topnav {
     height: 120px;
     position: sticky;
     padding: 0 20px;
+    border-radius: 0 0 15px 15px;
+    justify-content: space-between;
 }
     nav.topnav img {
         width: 160px;
@@ -25,7 +76,7 @@ nav.topnav {
     nav.topnav ul {
         display: flex;
         list-style: none;
-        gap: 14px;
+        gap: 16px;
         padding: 16px;
     }
         nav.topnav ul li a {
@@ -33,13 +84,15 @@ nav.topnav {
             color: black;
             font-weight: bold;
             display: block;
-            padding: 10px 16px;
+            padding: 12px 20px;
             background-color: whitesmoke;
             border-radius: 12px 12px 12px 12px;
+            box-shadow: 1px 2px black;
         }
         nav.topnav ul li a:hover {
-            background-color: whitesmoke;
-    /* plan for later: make them look like buttons being pressed on hover */
-            color: black;
-            text-shadow: none;
+            filter: brightness(0.95)
+        }
+        nav.topnav ul li a:active {
+            transform: translateY(1px);
+            box-shadow: -2px -2px black;
         }
