--- a/reviews/style.css
+++ b/reviews/style.css
@@ -11,6 +11,7 @@ body {
     margin: 0;
 }
 
+/* navigation bar */
 nav.topnav {
     display: flex;
     align-items: center;
@@ -18,6 +19,8 @@ nav.topnav {
     height: 120px;
     position: sticky;
     padding: 0 20px;
+    border-radius: 0 0 15px 15px;
+    justify-content: space-between;
 }
     nav.topnav img {
         width: 160px;
@@ -25,7 +28,7 @@ nav.topnav {
     nav.topnav ul {
         display: flex;
         list-style: none;
-        gap: 14px;
+        gap: 16px;
         padding: 16px;
     }
         nav.topnav ul li a {
@@ -33,13 +36,15 @@ nav.topnav {
             color: black;
             font-weight: bold;
             display: block;
-            padding: 10px 16px;
+            padding: 12px 20px;
             background-color: whitesmoke;
             border-radius: 12px 12px 12px 12px;
+            box-shadow: 1px 2px black;
         }
         nav.topnav ul li a:hover {
-            background-color: whitesmoke;
-    /* plan for later: make them look like buttons being pressed on hover */
-            color: black;
-            text-shadow: none;
+            filter: brightness(0.95)
+        }
+        nav.topnav ul li a:active {
+            transform: translateY(1px);
+            box-shadow: -2px -2px black;
         }
